# interior-design-agent

./: .env.example  .gitignore  DECISION_LOG.md  README.md  STATUS.md  app.py  cli.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: offline-tests.yml
.streamlit/: secrets.toml.example
data/: interior_company_catalog.db
docs/: EVAL_RESULTS.md  EVAL_RUBRIC.md  IMPLEMENTATION_PLAN.md  LIVE_RUN_COST_INCIDENT.md  LIVE_TEST_RUNBOOK.md  SUBMISSION_CHECKLIST.md
evals/: golden_set.yaml  judge.py  offline_fixtures.py  run_evals.py  scorers.py  ship_gate.py
scripts/: capture_ui.py
src/interior_agent/: __init__.py  agent.py  config.py  db.py  fit.py  must_haves.py  prompts.py  schemas.py  tools.py  validator.py
src/interior_agent/ui/: __init__.py  chat.py  demo.py  input_parser.py  layout.py  presenter.py  state.py
submission/: README.md
submission/docs/: EVAL_RESULTS.md  LIVE_TEST_RUNBOOK.md
submission/screenshots/: README.md
submission/video/: README.md
tests/: test_agent_loop.py  test_app_import.py  test_eval_safety.py  test_scorers.py  test_tools.py  test_ui_chat_flow.py  test_ui_containers.py  test_ui_conversation_and_guardrails.py  test_ui_demo.py  test_ui_layout.py  test_ui_polish.py  test_ui_state.py  test_validator.py
